AC_INIT(sign1.c)

PACKAGE=xmlsec-examples
VERSION=0.0.0

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_MAINTAINER_MODE

dnl
dnl Check the environment
dnl
AC_ISC_POSIX
AC_PROG_CC
AC_PROG_INSTALL
AC_ARG_PROGRAM
AC_STDC_HEADERS
AM_PROG_LIBTOOL

dnl 
dnl Check for xmlsec and friends
dnl
PKG_CHECK_MODULES(XMLSEC, xmlsec xml2 libxslt,,exit)
AC_SUBST(XMLSEC_CFLAGS)
AC_SUBST(XMLSEC_LIBS)

dnl
dnl Install flags
dnl
CFLAGS="$CFLAGS $XMLSEC_CFLAGS"
CPPFLAGS="$CPPFLAGS $XMLSEC_CFLAGS"
LDFLAGS="$LDFLAGS $XMLSEC_LIBS"

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

AC_OUTPUT([
Makefile
])

